# fin-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file_test.py  pyproject.toml
app/: debug_agent.py  main.py  streamlit_app.py
app/agents/: graph.py  middlewares.py  tools.py
app/api/endpoints/: chat.py  transactions.py
app/core/: config.py  db.py
app/models/: transaction.py
app/services/: finance_service.py
