[project]
name = "fin-agent"
version = "0.1.0"
description = "Privacy-first AI Financial Agent"
authors = [
    {name = "Ash Lao"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pandas (>=3.0.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
